[gd_scene load_steps=51 format=3 uid="uid://cjo666r0i1rgi"]

[ext_resource type="Texture2D" uid="uid://cxvlgj2qrh3bg" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Arena de Fondo.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dt6h8s62ojbkh" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Mar/Primera capa mar.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cn0ewwbjh2ny8" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Mar/Segunda capa mar.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dnifca5ohgi1m" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Mar/Tercera capa mar.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bqd5dnnal50gk" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Mar/Ola.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dnt04soo0ddx1" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Mar/Espuma.png" id="6"]
[ext_resource type="Texture2D" uid="uid://d3pxefkqdxc0v" path="res://Assets/Images/LimpiandoCosta/Pantalla 5/Palmeras/Palmera 1.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bxcvi6gxr7wls" path="res://Assets/Images/LimpiandoCosta/Pantalla 5/Muro y calle.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dxfth8jllxxca" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Detalles de la arena.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cmnytyp84h48t" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Mar/Arena humeda.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cfm8msakhp18p" path="res://Assets/Images/LimpiandoCosta/Pantalla 5/Palmeras/Palmera 3.png" id="11"]
[ext_resource type="Texture2D" uid="uid://c1sxl871yxaq3" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Banca.png" id="12"]
[ext_resource type="Texture2D" uid="uid://b10ppknfij4ci" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Farol.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cq8vgbqg2wabd" path="res://Assets/Images/LimpiandoCosta/Pantalla 2/Basurero.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b2dl8ta3s0cjx" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Estrella de mar.png" id="15"]
[ext_resource type="Script" uid="uid://cw0q3qhst0ylb" path="res://Scenes/Games/LimpiandoCosta/Nivel5/LimpiandoCosta.gd" id="16"]
[ext_resource type="Texture2D" uid="uid://45yp25lcal61" path="res://Assets/Images/LimpiandoCosta/Pantalla 5/Farol.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cyrvu554bved" path="res://Assets/Images/LimpiandoCosta/Pantalla 5/Rótulo.png" id="18"]
[ext_resource type="AudioStream" uid="uid://udn38bqj4pjw" path="res://Assets/Sounds/limpiando_costa.ogg" id="19"]
[ext_resource type="Texture2D" uid="uid://df7s26ukfd7dj" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Arbusto.png" id="20"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Illea/Caminando/IlleaCaminando.tscn" id="21"]
[ext_resource type="Texture2D" uid="uid://ceomp1iletnsg" path="res://Assets/Images/Tilesets/Bloque.png" id="22"]
[ext_resource type="PackedScene" uid="uid://7jnwei6j4avo" path="res://Scenes/Utility/Contador.tscn" id="23"]
[ext_resource type="Script" uid="uid://dcsoad8tfhc0u" path="res://Scenes/Games/Pescando/Trash/Botella.gd" id="24"]
[ext_resource type="Script" uid="uid://bcybbewon6ehi" path="res://Scenes/Games/Pescando/Trash/Cuchara.gd" id="25"]
[ext_resource type="Script" uid="uid://coj4uy0xh84g8" path="res://Scenes/Games/Pescando/Trash/SeguroLata.gd" id="26"]
[ext_resource type="Texture2D" uid="uid://dkcobmx1iiwbw" path="res://Assets/Images/UnderSeaBG/Items/Trash/Jeringa.png" id="27"]
[ext_resource type="Texture2D" uid="uid://buk5rjpkwogr4" path="res://Assets/Images/UnderSeaBG/Items/Trash/lata.png" id="28"]
[ext_resource type="Texture2D" uid="uid://bqrpmmbihein5" path="res://Assets/Images/UnderSeaBG/Items/Trash/Máquina de afeitar.png" id="29"]
[ext_resource type="Texture2D" uid="uid://c51xayco2qpe0" path="res://Assets/Images/UnderSeaBG/Items/Seguro para latas.png" id="30"]
[ext_resource type="Texture2D" uid="uid://c0f0yidkx7of7" path="res://Assets/Images/UnderSeaBG/Items/botella.png" id="31"]
[ext_resource type="Texture2D" uid="uid://cl8n3ifvje7x4" path="res://Assets/Images/UnderSeaBG/Items/Trash/Calcetín.png" id="32"]
[ext_resource type="Texture2D" uid="uid://0f33yhyfc48w" path="res://Assets/Images/UnderSeaBG/Items/Trash/mascarilla.png" id="33"]
[ext_resource type="Texture2D" uid="uid://bnlty7bm2ccpe" path="res://Assets/Images/UnderSeaBG/Items/Trash/Cuchara.png" id="34"]
[ext_resource type="PackedScene" path="res://Scenes/Pause/PauseMenu.tscn" id="36"]
[ext_resource type="Texture2D" uid="uid://da51uxhvwvj4n" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/arena humeda final .png" id="37"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/shader/ShaderWindWakerBeach.tscn" id="38"]
[ext_resource type="AudioStream" uid="uid://yl51anc2kk07" path="res://Assets/Sounds/SFX/get_item.wav" id="39"]
[ext_resource type="AudioStream" uid="uid://yddetbe8a0m7" path="res://Assets/Sounds/SFX/ender_punch.wav" id="40"]
[ext_resource type="PackedScene" uid="uid://b17rf02r12bmp" path="res://Scenes/Utility/analog/Analog.tscn" id="41"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/CleanBeach/Crab/Crab.tscn" id="42"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/GameOver/GameOver.tscn" id="43"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/Win/Win.tscn" id="44"]
[ext_resource type="FontFile" path="res://Assets/Fonts/btnFont.tres" id="45"]
[ext_resource type="Texture2D" uid="uid://cob8eefiqhkjs" path="res://Assets/Images/Fondo de contador de puntos.png" id="46"]

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(140, 80)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n4mpj"]
texture = ExtResource("22")
texture_region_size = Vector2i(80, 80)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u6ntw"]
texture = ExtResource("22")
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 8, -8, -8, -8, -8, 8)

[sub_resource type="TileSet" id="3"]
tile_size = Vector2i(80, 80)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_n4mpj")
sources/1 = SubResource("TileSetAtlasSource_u6ntw")

[sub_resource type="CapsuleShape2D" id="4"]
radius = 27.1021
height = 54.2041

[node name="LimpiandoCosta" type="Node2D" groups=["level_limpia_costa"]]
script = ExtResource("16")

[node name="Background" type="Node" parent="."]

[node name="Wave" type="ParallaxBackground" parent="Background"]

[node name="Sand" type="Sprite2D" parent="Background/Wave"]
visible = false
z_index = -1
texture = ExtResource("1")
centered = false

[node name="WetSand" type="Sprite2D" parent="Background/Wave"]
visible = false
position = Vector2(0, 800)
texture = ExtResource("10")
centered = false

[node name="Sand2" type="Sprite2D" parent="Background/Wave"]
z_index = -1
texture = ExtResource("37")
centered = false

[node name="ShaderWindWakerBeach" parent="Background/Wave" instance=ExtResource("38")]
z_index = -2

[node name="First" type="ParallaxLayer" parent="Background/Wave"]
visible = false

[node name="Sea" type="Sprite2D" parent="Background/Wave/First"]
position = Vector2(-4, 800)
texture = ExtResource("2")
centered = false

[node name="Wave" type="Sprite2D" parent="Background/Wave/First"]
z_index = 1
position = Vector2(0, 880)
texture = ExtResource("5")
centered = false

[node name="Second" type="ParallaxLayer" parent="Background/Wave"]
visible = false

[node name="Sea" type="Sprite2D" parent="Background/Wave/Second"]
position = Vector2(-4, 908)
texture = ExtResource("3")
centered = false

[node name="Wave" type="Sprite2D" parent="Background/Wave/Second"]
z_index = 1
position = Vector2(0, 1100)
texture = ExtResource("5")
centered = false

[node name="Third" type="ParallaxLayer" parent="Background/Wave"]
visible = false

[node name="Sea" type="Sprite2D" parent="Background/Wave/Third"]
position = Vector2(-4, 886)
texture = ExtResource("4")
centered = false

[node name="Wave" type="Sprite2D" parent="Background/Wave/Third"]
z_index = 1
position = Vector2(0, 1400)
texture = ExtResource("5")
centered = false

[node name="Bubbles" type="ParallaxLayer" parent="Background/Wave"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Background/Wave/Bubbles"]
position = Vector2(0, 1050)
texture = ExtResource("6")
centered = false

[node name="SandDetail" type="Sprite2D" parent="Background/Wave"]
position = Vector2(0, 256)
scale = Vector2(1.07962, 1.34797)
texture = ExtResource("9")
centered = false

[node name="Ambience" type="Node2D" parent="Background"]

[node name="IlleaCaminando" parent="Background/Ambience" instance=ExtResource("21")]
position = Vector2(2300, 800)
scale = Vector2(0.4, 0.4)

[node name="Chair1" type="Sprite2D" parent="Background/Ambience"]
z_index = 1
position = Vector2(650, 250)
texture = ExtResource("12")

[node name="Road" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(2000, 90)
texture = ExtResource("8")

[node name="Chair2" type="Sprite2D" parent="Background/Ambience"]
z_index = 1
position = Vector2(2000, 250)
texture = ExtResource("12")

[node name="Light1" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(1000, 500)
texture = ExtResource("13")

[node name="Palmera1" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(1700, 50)
texture = ExtResource("11")

[node name="Palmera2" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(400, 50)
texture = ExtResource("7")

[node name="Palmera3" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(1200, 400)
texture = ExtResource("7")

[node name="EstrellaDeMar" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(1264, 1338)
texture = ExtResource("15")

[node name="Trash" type="Area2D" parent="Background/Ambience"]
position = Vector2(2375, 200)

[node name="Trash" type="Sprite2D" parent="Background/Ambience/Trash"]
texture = ExtResource("14")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Ambience/Trash"]
position = Vector2(2, 35)
shape = SubResource("5")

[node name="Grass1" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(400, 320)
texture = ExtResource("20")

[node name="Grass2" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(300, 320)
texture = ExtResource("20")

[node name="Grass3" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(1100, 700)
texture = ExtResource("20")

[node name="Grass4" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(1200, 700)
texture = ExtResource("20")

[node name="Farol" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(100, 150)
texture = ExtResource("17")

[node name="Fence" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(1981, 704)
texture = ExtResource("18")

[node name="EstrellaDeMar2" type="Sprite2D" parent="Background/Ambience"]
position = Vector2(3173, 818)
texture = ExtResource("15")

[node name="Contador" parent="Background" instance=ExtResource("23")]

[node name="Collisions" type="Node" parent="."]

[node name="Terrain" type="TileMap" parent="Collisions"]
visible = false
tile_set = SubResource("3")
format = 2

[node name="Trash" type="Node" parent="."]

[node name="SeguroLata" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(1300, 1000)
scale = Vector2(0.5, 0.5)
script = ExtResource("26")

[node name="Sprite2D" type="Sprite2D" parent="Trash/SeguroLata"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/SeguroLata"]
rotation = 1.13446
shape = SubResource("4")

[node name="SeguroLata2" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(1650, 1150)
scale = Vector2(0.5, 0.5)
script = ExtResource("26")

[node name="Sprite2D" type="Sprite2D" parent="Trash/SeguroLata2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/SeguroLata2"]
rotation = 1.13446
shape = SubResource("4")

[node name="SeguroLata3" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2500, 1100)
scale = Vector2(0.5, 0.5)
script = ExtResource("26")

[node name="Sprite2D" type="Sprite2D" parent="Trash/SeguroLata3"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/SeguroLata3"]
rotation = 1.13446
shape = SubResource("4")

[node name="Botella" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(900, 100)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Botella"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Botella"]
shape = SubResource("4")

[node name="Botella2" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2700, 250)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Botella2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Botella2"]
shape = SubResource("4")

[node name="Botella3" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(3000, 600)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Botella3"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Botella3"]
shape = SubResource("4")

[node name="Botella4" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2950, 350)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Botella4"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Botella4"]
shape = SubResource("4")

[node name="Botella5" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(1350, 500)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Botella5"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Botella5"]
shape = SubResource("4")

[node name="Calcetin" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(1650, 350)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Calcetin"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Calcetin"]
rotation = 1.5708
shape = SubResource("4")

[node name="Calcetin2" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(1650, 900)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Calcetin2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Calcetin2"]
rotation = 1.5708
shape = SubResource("4")

[node name="Calcetin3" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(650, 450)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Calcetin3"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Calcetin3"]
rotation = 1.5708
shape = SubResource("4")

[node name="Mascarilla" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(950, 950)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Mascarilla"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Mascarilla"]
rotation = 1.5708
shape = SubResource("4")

[node name="Mascarilla2" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(855, 550)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Mascarilla2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Mascarilla2"]
rotation = 1.5708
shape = SubResource("4")

[node name="Mascarilla3" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(1500, 650)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Mascarilla3"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Mascarilla3"]
rotation = 1.5708
shape = SubResource("4")

[node name="Mascarilla4" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2652, 650)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Mascarilla4"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Mascarilla4"]
rotation = 1.5708
shape = SubResource("4")

[node name="Mascarilla5" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2300, 500)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Mascarilla5"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Mascarilla5"]
rotation = 1.5708
shape = SubResource("4")

[node name="Mascarilla6" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2650, 400)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Mascarilla6"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Mascarilla6"]
rotation = 1.5708
shape = SubResource("4")

[node name="Afeitadora" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2850, 875)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Afeitadora"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("29")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Afeitadora"]
rotation = 1.5708
shape = SubResource("4")

[node name="Afeitadora2" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(150, 550)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Afeitadora2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("29")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Afeitadora2"]
rotation = 1.5708
shape = SubResource("4")

[node name="Lata" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(500, 700)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Lata"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Lata"]
rotation = 1.5708
shape = SubResource("4")

[node name="Lata2" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(400, 500)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Lata2"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Lata2"]
rotation = 1.5708
shape = SubResource("4")

[node name="Lata3" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2050, 520)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Lata3"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Lata3"]
rotation = 1.5708
shape = SubResource("4")

[node name="Jeringa" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(700, 825)
scale = Vector2(0.5, 0.5)
script = ExtResource("24")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Jeringa"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Jeringa"]
rotation = 1.5708
shape = SubResource("4")

[node name="Cuchara" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(1975, 1200)
scale = Vector2(0.5, 0.5)
script = ExtResource("25")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Cuchara"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Cuchara"]
rotation = 1.5708
shape = SubResource("4")

[node name="Cuchara2" type="CharacterBody2D" parent="Trash" groups=["enemy"]]
position = Vector2(2000, 950)
scale = Vector2(0.5, 0.5)
script = ExtResource("25")

[node name="Sprite2D" type="Sprite2D" parent="Trash/Cuchara2"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trash/Cuchara2"]
rotation = 1.5708
shape = SubResource("4")

[node name="Songs" type="Node" parent="."]

[node name="BGSong" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource("19")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="GetSound" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource("39")
bus = &"SFX"

[node name="PunchSound" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource("40")
bus = &"SFX"

[node name="Crab" type="Node" parent="."]

[node name="Crab" parent="Crab" instance=ExtResource("42")]
position = Vector2(1200, 1960)
scale = Vector2(0.4, 0.4)

[node name="WaitTimer" type="Timer" parent="Crab"]
wait_time = 5.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="Crab"]
wait_time = 3.0

[node name="Tries" type="Node2D" parent="."]
z_index = 2
position = Vector2(1600, 0)

[node name="BGTries" type="Sprite2D" parent="Tries"]
rotation = -1.5708
scale = Vector2(1, 3.2)
texture = ExtResource("46")
offset = Vector2(100, -2.5)

[node name="MarginContainer" type="MarginContainer" parent="Tries"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -189.0
offset_right = 189.0
offset_bottom = 79.0

[node name="LblTries" type="Label" parent="Tries/MarginContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource("45")
text = "INTENTOS: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Analog" parent="HUD" instance=ExtResource("41")]
z_index = 100
position = Vector2(214, 1581)
scale = Vector2(2, 2)

[node name="Pause" type="Node2D" parent="HUD"]
z_index = 100
position = Vector2(1, -1)

[node name="PauseMenu" parent="HUD/Pause" instance=ExtResource("36")]
z_index = 100
position = Vector2(3200, 1750)

[node name="GameOver" parent="HUD" instance=ExtResource("43")]
visible = false
position = Vector2(1, -1)

[node name="Win" parent="HUD" instance=ExtResource("44")]
visible = false
position = Vector2(1, -1)

[connection signal="body_entered" from="Background/Ambience/Trash" to="." method="_on_Trash_body_entered"]
[connection signal="timeout" from="Crab/WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="Crab/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
